--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "tsx": "^4.21.0",
+    "uuid": "^13.0.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
+    "@types/uuid": "^10.0.0",
     "dotenv": "^17.2.3",
     "prisma": "^7.3.0",
     "ts-node-dev": "^2.0.0",
